Attemp2: Fixing desktop mode not working on mobile.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -527,7 +527,7 @@ footer{
     }
 }
 
-@media (max-width: 992px){
+@media (max-width: 920px){
 
     h1{
         font-size: 10vw;
